kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock-forex-app-service
spec:
  type: LoadBalancer
  selector:
    app: stock-forex-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
